syntax = "proto3";
package goldo.nucleo.servos;
import "goldo/pb2_options.proto";

enum ServoType {
  UNKNOWN = 0;
  STANDARD = 1;
  DYNAMIXEL_AX12 = 2;
  DYNAMIXEL_MX28 = 3;
  GOLDO_LIFT = 4;
}

message ServoConfig {
  ServoType type = 1 [(goldo.pb2_options.cpp_type) = UINT8];
  int32 id = 2 [(goldo.pb2_options.cpp_type) = UINT8];
  int32 cw_limit = 3 [(goldo.pb2_options.cpp_type) = UINT16];
  int32 ccw_limit = 4 [(goldo.pb2_options.cpp_type) = UINT16];
  int32 max_speed = 5 [(goldo.pb2_options.cpp_type) = UINT16];
  int32 max_torque = 6 [(goldo.pb2_options.cpp_type) = UINT16];
  string name = 64 [(goldo.pb2_options.cpp_type) = VOID];
}

message ServoPosition {
  int32 servo_id = 1 [(goldo.pb2_options.cpp_type) = UINT8];
  uint32 position = 2 [(goldo.pb2_options.cpp_type) = UINT16];
}
message Move {
  int32 servo_id = 1 [(goldo.pb2_options.cpp_type) = UINT8];
  uint32 position = 2 [(goldo.pb2_options.cpp_type) = UINT16];
  uint32 speed = 3 [(goldo.pb2_options.cpp_type) = UINT16];
}
